--- a/src/pom.xml
+++ b/src/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.15</version>
         </dependency>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     </dependencies>
 
 </project>
