--- a/src/pygmy-backend/Cargo.toml
+++ b/src/pygmy-backend/Cargo.toml
@@ -13,7 +13,13 @@ diesel = { version = "1.0.0", features = ["sqlite"] }
 dotenv = "0.9.0"
 lazy_static = "1.4.0"
 serde = { version = "1.0", features = ["derive"] }
+reqwest = { version = "0.10", features = ["json"] }
+tokio = { version = "0.2", features = ["full"] }
 
 [[bin]]
-name = "catalog"
+name = "catalog-server"
 path = "src/catalog.rs"
+
+[[bin]]
+name = "order-server"
+path = "src/order.rs"
