--- a/src/pygmy-backend/Cargo.toml
+++ b/src/pygmy-backend/Cargo.toml
@@ -13,8 +13,15 @@ diesel = { version = "1.0.0", features = ["sqlite"] }
 dotenv = "0.9.0"
 lazy_static = "1.4.0"
 serde = { version = "1.0", features = ["derive"] }
-reqwest = { version = "0.10", features = ["json"] }
 tokio = { version = "0.2", features = ["full"] }
+log = { version = "0.4.5", features = ["std"] }
+simple_logger = "1.6.0"
+
+
+[dependencies.reqwest]
+version = "0.10"
+default-features = false
+features = ["json"]
 
 [[bin]]
 name = "catalog-server"
