--- a/src/orderservice/pom.xml
+++ b/src/orderservice/pom.xml
@@ -63,6 +63,11 @@
             <version>1.7.15</version>
         </dependency>
         <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+        <dependency>
             <groupId>com.googlecode.json-simple</groupId>
             <artifactId>json-simple</artifactId>
             <version>1.1.1</version>
