--- a/src/deployment/.env
+++ b/src/deployment/.env
@@ -1,3 +1,3 @@
 DATABASE_URL=db
-CAT_SERVER_ADDR = 'elnux2.cs.umass.edu:34801'
-ORDER_SERVER_ADDR = 'elnux3.cs.umass.edu:34802'
+CAT_SERVER_ADDR = 'elnux2.cs.umass.edu'
+ORDER_SERVER_ADDR = 'elnux3.cs.umass.edu'
