--- a/src/.env
+++ b/src/.env
@@ -19,3 +19,48 @@ ORDER_SERVER = 'elnux3.cs.umass.edu:34843'
 FRONTEND_SERVER = 'elnux1.cs.umass.edu:34841'
 CAT_SERVER = 'elnux2.cs.umass.edu:34842'
 ORDER_SERVER = 'elnux3.cs.umass.edu:34843'
+FRONTEND_SERVER = 'elnux1.cs.umass.edu:34841'
+CAT_SERVER = 'elnux2.cs.umass.edu:34842'
+ORDER_SERVER = 'elnux3.cs.umass.edu:34843'
+FRONTEND_SERVER = 'elnux1.cs.umass.edu:34841'
+CAT_SERVER = 'elnux2.cs.umass.edu:34842'
+ORDER_SERVER = 'elnux3.cs.umass.edu:34843'
+FRONTEND_SERVER = 'elnux1.cs.umass.edu:34841'
+CAT_SERVER = 'elnux2.cs.umass.edu:34842'
+ORDER_SERVER = 'elnux3.cs.umass.edu:34843'
+FRONTEND_SERVER = 'elnux1.cs.umass.edu:34841'
+CAT_SERVER = 'elnux2.cs.umass.edu:34842'
+ORDER_SERVER = 'elnux3.cs.umass.edu:34843'
+FRONTEND_SERVER = 'elnux1.cs.umass.edu:34841'
+CAT_SERVER = 'elnux2.cs.umass.edu:34842'
+ORDER_SERVER = 'elnux3.cs.umass.edu:34843'
+FRONTEND_SERVER = 'elnux1.cs.umass.edu:34841'
+CAT_SERVER = 'elnux2.cs.umass.edu:34842'
+ORDER_SERVER = 'elnux3.cs.umass.edu:34843'
+FRONTEND_SERVER = 'elnux1.cs.umass.edu:34841'
+CAT_SERVER = 'elnux2.cs.umass.edu:34842'
+ORDER_SERVER = 'elnux3.cs.umass.edu:34843'
+FRONTEND_SERVER = 'elnux1.cs.umass.edu:34841'
+CAT_SERVER = 'elnux2.cs.umass.edu:34842'
+ORDER_SERVER = 'elnux3.cs.umass.edu:34843'
+FRONTEND_SERVER = 'elnux1.cs.umass.edu:34841'
+CAT_SERVER = 'elnux2.cs.umass.edu:34842'
+ORDER_SERVER = 'elnux3.cs.umass.edu:34843'
+FRONTEND_SERVER = 'elnux1.cs.umass.edu:34841'
+CAT_SERVER = 'elnux2.cs.umass.edu:34842'
+ORDER_SERVER = 'elnux3.cs.umass.edu:34843'
+FRONTEND_SERVER = 'elnux1.cs.umass.edu:34841'
+CAT_SERVER = 'elnux2.cs.umass.edu:34842'
+ORDER_SERVER = 'elnux3.cs.umass.edu:34843'
+FRONTEND_SERVER = 'elnux1.cs.umass.edu:34841'
+CAT_SERVER = 'elnux2.cs.umass.edu:34842'
+ORDER_SERVER = 'elnux3.cs.umass.edu:34843'
+FRONTEND_SERVER = 'elnux1.cs.umass.edu:34841'
+CAT_SERVER = 'elnux2.cs.umass.edu:34842'
+ORDER_SERVER = 'elnux3.cs.umass.edu:34843'
+FRONTEND_SERVER = 'elnux1.cs.umass.edu:34841'
+CAT_SERVER = 'elnux2.cs.umass.edu:34842'
+ORDER_SERVER = 'elnux3.cs.umass.edu:34843'
+FRONTEND_SERVER = 'elnux1.cs.umass.edu:34841'
+CAT_SERVER = 'elnux2.cs.umass.edu:34842'
+ORDER_SERVER = 'elnux3.cs.umass.edu:34843'
