--- a/src/pygmy-frontend/Cargo.toml
+++ b/src/pygmy-frontend/Cargo.toml
@@ -14,6 +14,7 @@ lazy_static = "1.4.0"
 log = { version = "0.4.5", features = ["std"] }
 simple_logger = "1.6.0"
 serde = { version = "1.0", features = ["derive"] }
+lru-cache = "0.1"
 parking_lot = "0.10.2"
 
 [dependencies.reqwest]
